Hard to reproduce crash while rendering animation #77734
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#77734
Loading…
Reference in New Issue
No description provided.
Delete Branch "%!s(<nil>)"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Windows-10-10.0.14393-SP0 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19
Blender Version
Broken: version: 2.90.0 Alpha current master, 2.83.0, branch: master, commit date: 2020-06-03 14:38, hash:
211b6c29f7
Worked: unknown
Short description of error
Both
2.83
and2.90
sometimes crash at random frame during animation render. The bug is hard to catch reliably, but it seems to happen more often wtih some render settings. In particular I couldn't reproduce it without "presistent images" checked. Also it seems to be sensitive to frame count, render sample count, output resolution and tile size. Tested only with Cycles. Happens both with GPU and CPU render, with CPU much less frequently. Tested only on one Windows machine. The crash only happens on release builds (2.83
- official installer,2.90
- self built with more or less standard settings). The issue is particularly hard to catch as it dissappears as soon as any code is altered or a breakpoint/logpoint is placed in the suspicious code. Changing build optimizations also breaks reproducibility.The crash happens at
external_engine.h:560
:Stack trace:
Exact steps for others to reproduce the error
Or use one of the attached files:
crash-fast-unreliable.blend
crash-unsimplified-more-reliable.blend
hat_2.83_debug_logs.zip
Added subscriber: @VincentBlankfield
#77918 was marked as duplicate of this issue
I suddenly realized a should-be-obvious way to make the crash more reliably reproducible (not 100% though):
Same crash, same place, crashes on the first-second frame with the test file, based on the default scene, with following settings:
With other test files crashes less likely. It depends on the rendering speed. Without the "presistent images" checked I didn't manage to get a crash.
The proposed fix still works, but I lack the big picture of how the threads interact, so there may be a problem somwhere else.
Changed status from 'Needs Triage' to: 'Confirmed'
Added subscriber: @mano-wii
Added subscribers: @toxsickcity, @iss
This issue was referenced by
6e6954ac83
This issue was referenced by
e93663363e
Changed status from 'Confirmed' to: 'Resolved'