Fix T77734: random crash when rendering animation

Differential Revision: https://developer.blender.org/D7986